Comandos en MobaXTerm.txt

[ddparrap@guane ~]$ srun hostname
guane09.uis.edu.co
[ddparrap@guane ~]$ mkdir taller01
[ddparrap@guane ~]$ ls
taller01
[ddparrap@guane ~]$ cd taller01/
[ddparrap@guane taller01]$ srun hostname
guane09.uis.edu.co
[ddparrap@guane taller01]$ srun -p normal -w guane09 --gres=gpu:1 --pty /bin/bash
[ddparrap@guane09 taller01]$ nano jacobi.cpp
[ddparrap@guane09 taller01]$ gcc jacobi.cpp -o jacobi
jacobi.cpp:2:18: fatal error: conio.h: No such file or directory
 #include<conio.h>
                  ^
compilation terminated.
[ddparrap@guane09 taller01]$ nano jacobi.cpp
[ddparrap@guane09 taller01]$ gcc -o jacobi jacobi.cpp -lm
jacobi.cpp: In function ‘int main()’:
jacobi.cpp:38:9: error: ‘clrscr’ was not declared in this scope
  clrscr();
         ^
jacobi.cpp:66:8: error: ‘getch’ was not declared in this scope
  getch();
        ^
[ddparrap@guane09 taller01]$ nano jacobi.cpp
[ddparrap@guane09 taller01]$ gcc -o jacobi jacobi.cpp -lm
jacobi.cpp: In function ‘int main()’:
jacobi.cpp:38:16: error: ‘system’ was not declared in this scope
  system("clear");
                ^
[ddparrap@guane09 taller01]$ nano jacobi.cpp
[ddparrap@guane09 taller01]$ gcc -o jacobi jacobi.cpp -lm
/tmp/ccy2RMvc.o: In function `__static_initialization_and_destruction_0(int, int)':
jacobi.cpp:(.text+0x20a): undefined reference to `std::ios_base::Init::Init()'
jacobi.cpp:(.text+0x219): undefined reference to `std::ios_base::Init::~Init()'
collect2: error: ld returned 1 exit status
[ddparrap@guane09 taller01]$ gcc -o jacobi jacobi.cpp -lm -lstdc++
[ddparrap@guane09 taller01]$ ./jacobi
Enter tolerable error:

^C
[ddparrap@guane09 taller01]$ gcc -o jacobi_01 jacobi.cpp -lm -lstdc++
[ddparrap@guane09 taller01]$ ./jacobi_01
Enter tolerable error:
0.00000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000001

Count   x       y       z
1       0.8500  -0.9000 1.2500
2       1.0200  -0.9650 1.0300
3       1.0013  -1.0015 1.0032
4       1.0004  -1.0000 0.9997
5       1.0000  -1.0001 1.0000
6       1.0000  -1.0000 1.0000
7       1.0000  -1.0000 1.0000
8       1.0000  -1.0000 1.0000
9       1.0000  -1.0000 1.0000

Solution: x=1.000, y=-1.000 and z = 1.000
[ddparrap@guane09 taller01]$ ./jacobi_01
Enter tolerable error:
0.05

Count   x       y       z
1       0.8500  -0.9000 1.2500
2       1.0200  -0.9650 1.0300
3       1.0013  -1.0015 1.0032

Solution: x=1.001, y=-1.001 and z = 1.003
[ddparrap@guane09 taller01]$ gcc -o jacobi_02 jacobi.cpp -lm -lstdc++
[ddparrap@guane09 taller01]$ ./jacobi_02
Enter tolerable error:
0.001

Count   x       y       z
1       0.8500  -0.9000 1.2500
2       1.0200  -0.9650 1.0300
3       1.0013  -1.0015 1.0032
4       1.0004  -1.0000 0.9997

Solution: x=1.000, y=-1.000 and z = 1.000
[ddparrap@guane09 taller01]$ time ./jacobi
Enter tolerable error:
0.000000000000000000000000000000000000001

Count   x       y       z
1       0.8500  -0.9000 1.2500
2       1.0200  -0.9650 1.0300
3       1.0013  -1.0015 1.0032
4       1.0004  -1.0000 0.9997
5       1.0000  -1.0001 1.0000
6       1.0000  -1.0000 1.0000
7       1.0000  -1.0000 1.0000
8       1.0000  -1.0000 1.0000
9       1.0000  -1.0000 1.0000

Solution: x=1.000, y=-1.000 and z = 1.000

real    0m5.685s
user    0m0.001s
sys     0m0.002s
[ddparrap@guane09 taller01]$ time ./jacobi
Enter tolerable error:
0.005

Count   x       y       z
1       0.8500  -0.9000 1.2500
2       1.0200  -0.9650 1.0300
3       1.0013  -1.0015 1.0032
4       1.0004  -1.0000 0.9997

Solution: x=1.000, y=-1.000 and z = 1.000

real    0m5.594s
user    0m0.001s
sys     0m0.001s
[ddparrap@guane09 taller01]$ time ./jacobi_01
Enter tolerable error:
0.005

Count   x       y       z
1       0.8500  -0.9000 1.2500
2       1.0200  -0.9650 1.0300
3       1.0013  -1.0015 1.0032
4       1.0004  -1.0000 0.9997

Solution: x=1.000, y=-1.000 and z = 1.000

real    0m5.396s
user    0m0.001s
sys     0m0.002s
[ddparrap@guane09 taller01]$ time ./jacobi_03
bash: ./jacobi_03: No such file or directory

real    0m0.006s
user    0m0.001s
sys     0m0.000s
[ddparrap@guane09 taller01]$ time ./jacobi_02
Enter tolerable error:
00.^H^H^C

real    0m5.133s
user    0m0.001s
sys     0m0.001s
[ddparrap@guane09 taller01]$ time ./jacobi_02
Enter tolerable error:
0.005

Count   x       y       z
1       0.8500  -0.9000 1.2500
2       1.0200  -0.9650 1.0300
3       1.0013  -1.0015 1.0032
4       1.0004  -1.0000 0.9997

Solution: x=1.000, y=-1.000 and z = 1.000

real    0m4.202s
user    0m0.002s
sys     0m0.000s

[ddparrap@guane09 taller01]$ cd
[ddparrap@guane09 ~]$  mkdir 4punto
[ddparrap@guane09 ~]$ nano jacobi.cpp
[ddparrap@guane09 ~]$ cd 4punto/
[ddparrap@guane09 4punto]$ ^C
[ddparrap@guane09 4punto]$ srun -p normal -w guane09 --gres=gpu:1 --pty /bin/bash

[ddparrap@guane09 4punto]$ gcc -o jacobi jacobi.cpp -lm -lstdc++
jacobi.cpp:3:17: error: ‘x’ was not declared in this scope
     int temp = *x;
                 ^
jacobi.cpp:4:5: error: ‘x’ does not name a type
     x =y;
     ^
jacobi.cpp:5:8: error: expected constructor, destructor, or type conversion before ‘=’ token
     *y = temp;
        ^
jacobi.cpp:6:1: error: expected declaration before ‘}’ token
 }
 ^
[ddparrap@guane09 4punto]$ nano jacobi.cpp
[ddparrap@guane09 4punto]$ gcc -o jacobi jacobi.cpp -lm -lstdc++
[ddparrap@guane09 4punto]$  ./jacobi
Antes del intercambio:
a = 10, b = 20
Después del intercambio:
a = 20, b = 10
[ddparrap@guane09 4punto]$ gcc -o jacobi_01 jacobi.cpp -lm -lstdc++
[ddparrap@guane09 4punto]$  ./jacobi_01
Antes del intercambio:
a = 10, b = 20
Después del intercambio:
a = 20, b = 10
[ddparrap@guane09 4punto]$ time ./jacobi_01
Antes del intercambio:
a = 10, b = 20
Después del intercambio:
a = 20, b = 10

real    0m0.010s
user    0m0.001s
sys     0m0.001s
[ddparrap@guane09 4punto]$ time ./jacobi
Antes del intercambio:
a = 10, b = 20
Después del intercambio:
a = 20, b = 10

real    0m0.012s
user    0m0.002s
sys     0m0.000s
[ddparrap@guane09 4punto]$  ./jacobi_02
bash: ./jacobi_02: No such file or directory
[ddparrap@guane09 4punto]$ gcc -o jacobi_02 jacobi.cpp -lm -lstdc++
[ddparrap@guane09 4punto]$ gcc -o jacobi_03 jacobi.cpp -lm -lstdc++
[ddparrap@guane09 4punto]$ time ./jacobi_01
Antes del intercambio:
a = 10, b = 20
Después del intercambio:
a = 20, b = 10

real    0m0.008s
user    0m0.001s
sys     0m0.001s
[ddparrap@guane09 4punto]$ time ./jacobi_02
Antes del intercambio:
a = 10, b = 20
Después del intercambio:
a = 20, b = 10

real    0m0.020s
user    0m0.002s
sys     0m0.000s
[ddparrap@guane09 4punto]$ time ./jacobi_03
Antes del intercambio:
a = 10, b = 20
Después del intercambio:
a = 20, b = 10

real    0m0.016s
user    0m0.002s
sys     0m0.000s



[ddparrap@guane09 4punto]$ gcc -o jacobi_O jacobi.cpp -lm -lstdc++
[ddparrap@guane09 4punto]$ time ./jacobi_O
Antes del intercambio:
a = 10, b = 20
Después del intercambio:
a = 20, b = 10

real    0m0.027s
user    0m0.001s
sys     0m0.001s
[ddparrap@guane09 4punto]$ gcc -o jacobi_O0 jacobi.cpp -lm -lstdc++
[ddparrap@guane09 4punto]$ time ./jacobi_O0
Antes del intercambio:
a = 10, b = 20
Después del intercambio:
a = 20, b = 10

real    0m0.007s
user    0m0.001s
sys     0m0.001s
[ddparrap@guane09 4punto]$ gcc -o jacobi_Ofast jacobi.cpp -lm -lstdc++
[ddparrap@guane09 4punto]$ time ./jacobi_Ofast
Antes del intercambio:
a = 10, b = 20
Después del intercambio:
a = 20, b = 10

real    0m0.011s
user    0m0.001s
sys     0m0.001s
[ddparrap@guane09 4punto]$ gcc -o jacobi_Og jacobi.cpp -lm -lstdc++
[ddparrap@guane09 4punto]$ time ./jacobi_Og
Antes del intercambio:
a = 10, b = 20
Después del intercambio:
a = 20, b = 10

real    0m0.020s
user    0m0.000s
sys     0m0.002s
[ddparrap@guane09 4punto]$ gcc -o jacobi_Oz jacobi.cpp -lm -lstdc++
[ddparrap@guane09 4punto]$ time ./jacobi_Oz
Antes del intercambio:
a = 10, b = 20
Después del intercambio:
a = 20, b = 10

real    0m0.018s
user    0m0.000s
sys     0m0.002s
[ddparrap@guane09 4punto]$
